--- a/Frontend/htm.html
+++ b/Frontend/htm.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
 <h1>HTML</h1>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwPIJf-aWkiywIQk3Am_jpB_dz_9ISlvXbVg&s" alt="No Logo Found" height="100" width="100">
 <p>Hypertext Markup Language (HTML) is the standard markup language[a] for documents designed to be displayed in a web browser. It defines the content and structure of web content. It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript, a programming language.</p>
+  </body>
+</html>
