--- a/Frontend/Css.html
+++ b/Frontend/Css.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
 <h1>CSS</h1>
 <img src="https://cdn.worldvectorlogo.com/logos/css-3.svg" alt="No Logo Found" height="100" width="100">
 <p>Cascading Style Sheets (CSS) is a style sheet language used for specifying the presentation and styling of a document written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML).[2] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.[3]</p>
+  </body>
+</html>
