--- a/Database/Monodb.html
+++ b/Database/Monodb.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
 <h1>MongoDB</h1>
 <img
   src="https://www.svgrepo.com/show/331488/mongodb.svg"
@@ -15,3 +23,5 @@
   are licensed under the Server Side Public License (SSPL). MongoDB is a member
   of the MACH Alliance.
 </p>
+  </body>
+</html>
