--- a/Backend/Javascript.html
+++ b/Backend/Javascript.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
 <h1>JAVASCRIPT</h1>
 <img src="https://static.vecteezy.com/system/resources/previews/027/127/463/non_2x/javascript-logo-javascript-icon-transparent-free-png.png" alt="Logo Not Found" height="100" width="100">
 <p><strong>JavaScript</strong> is a popular programming language mainly used to make websites interactive. It was created by <strong>Brendan Eich</strong> in 1995 while he was working at Netscape. JavaScript allows developers to add features like <strong>Animations</strong>, <strong>Buttons</strong>, and forms that respond to user actions on web pages. It works in web browsers and is an important part of web development along with HTML and CSS. Today, JavaScript is also used for building mobile apps, servers, and more.</p>
+  </body>
+</html>
