--- a/Backend/Python.html
+++ b/Backend/Python.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
 <h1>PYTHON</h1>
 <img
   src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Python.svg/480px-Python.svg.png"
@@ -16,3 +24,5 @@
   support have made it one of the most popular programming languages in the
   world.
 </p>
+  </body>
+</html>
