--- a/Backend/Frameworks/Django.html
+++ b/Backend/Frameworks/Django.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
 <h1>Django</h1>
 <img src="https://www.svgrepo.com/show/353657/django-icon.svg" alt="No Logo found" height="100" width="100">
 <p>Django is a high-level Python web framework that encourages rapid development and clean, pragmatic design. It's maintained by the Django Software Foundation and is free and open source. Django follows the model-template-views (MTV) architectural pattern, which is similar to the model-view-controller (MVC) pattern. It is primarily used for backend web development, handling tasks such as data modeling, URL routing, and templating. </p>
+  </body>
+</html>
